# apigw-log-visualizer

./: .pre-commit-config.yaml  .pylintrc  Makefile  README.md  alembic.ini  docker-compose.yaml  mypy.ini  pyproject.toml
for_develop/metabase/config/: metabase_database.env
for_develop/metabase/util/: README.md  get_dashboard_settings.py
for_develop/postgres/init/: init.sql
src/log_collection/domain/apigw_log/: apigw_log.py
src/log_collection/presentation/: apigw_log.py
src/log_collection/usecase/apigw_log/: apigw_log.py
