[tool.poetry]
name = "apigw-log-visualizer"
version = "0.1.0"
description = ""
authors = ["Tadashi Takahashi <ttakahashi@umn.co.jp>"]
readme = "README.md"
packages = [{include = "log_collection", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.29"
alembic = "^1.13.1"
boto3 = "^1.34.86"
asyncpg = "^0.29.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^5.0.0"
pylint = "^3.1.0"
pre-commit = "^3.7.0"
black = "^24.4.0"
pytest-mock = "^3.14.0"
faker = "^24.11.0"
mypy = "^1.9.0"
pylint-pydantic = "^0.3.2"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
